--- a/source/less/important.less
+++ b/source/less/important.less
@@ -44,11 +44,15 @@
     width: 94px;
     background-color: #e4e4e4;
     height: 30px;
-    font-family: inherit;
     font-size: 12px;
 }
 
 .new__item-more:hover {
+    background-color: white;
+    border: 2px solid #e4e4e4;
+}
+
+.new__item-more:focus {
     background-color: white;
     border: 2px solid #e4e4e4;
 }
@@ -60,11 +64,16 @@
     background-color: black;
     color: white;
     height: 30px;
-    font-family: inherit;
     font-size: 12px;
 }
 
 .new__item-buy:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+}
+
+.new__item-buy:focus {
     background-color: white;
     color: black;
     border: 2px solid black;
