--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "important.less";
 @import "useful.less";
 @import "catalog.less";
+@import "circumstances.less";
 
 @font-face {
     font-family: "Gotham"; /* Имя шрифта */
@@ -34,6 +35,24 @@ h1 {
 
 p {
     font-family: 'Gotham';
+}
+
+button {
+  font-family: inherit;
+  font-weight: inherit;
+}
+
+button:focus {
+  outline: none;
+}
+
+a {
+  font-family: inherit;
+  font-weight: inherit;
+}
+
+a:focus {
+  outline: none;
 }
 
 .visually-hidden {
