--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -38,6 +38,34 @@
     font-size: 18px;
 }
 
+.catalog__item-number {
+    display: flex;
+}
+
+.number__form input{
+    width: 20px;
+    border: none;
+    padding: 0;
+    height: 100%;
+    background-color: #f7f7f7;
+}
+
+.number__less {
+    border: none;
+    background-color: #f7f7f7;
+}
+
+.number__more {
+    border: none;
+    background-color: #f7f7f7;
+}
+
+.number__description {
+    margin: 0;
+    font-size: 10px;
+    color: gray;
+}
+
 .catalog__item-more {
     border: none;
     width: 94px;
