--- a/source/less/welcome.less
+++ b/source/less/welcome.less
@@ -39,3 +39,8 @@
 .welcome__button:hover {
     background-color: #f7f7f7;
 }
+
+.welcome__button:active {
+    background-color: white;
+    border: 2px solid black;
+}
