--- a/source/less/useful.less
+++ b/source/less/useful.less
@@ -7,8 +7,8 @@
     text-align: center;
     font-family: "GothamBlack1";
     text-transform: uppercase;
-    font-size: 36px;
-    padding-top: 60px;
+    font-size: 32px;
+    padding-top: 50px;
 }
 
 .useful__list {
@@ -20,4 +20,16 @@
 
 .useful__item {
     font-size: 20px;
+}
+
+@media (min-width: 768px) {
+    .useful__title {
+        padding-top: 60px;
+    }
+}
+
+@media (min-width: 1300px) {
+    .useful__title{
+        font-size: 36px;
+    } 
 }
