--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,104 +1,211 @@
 .main-nav {
   display: flex;
-  justify-content: space-between;
-  font-size: 16px;
+  flex-direction: column;
 }
-.main-nav__logo {
-  margin-left: 5%;
-  margin-top: 10px;
-  margin-bottom: 14px;
-}
-.main-nav__site-basket {
+.main-nav__logo-button {
   display: flex;
-  width: 700px;
+  width: 300px;
+  margin: auto;
   justify-content: space-between;
-  margin-right: 5%;
+}
+.main-nav__open-close {
+  background: none;
+  border: none;
+  padding: 0;
+}
+.main-nav__open-close::after {
+  content: '';
+  background-image: url('../img/menuopen.png');
+  background-size: 30px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 23px;
+  margin-left: -30px;
 }
 .site-list {
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-wrap: wrap;
   text-transform: uppercase;
+  margin-top: 20px;
+  display: none;
 }
 .site-list__item {
   list-style: none;
-  width: 200px;
-  margin: auto;
-  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-top: 1px solid lightgray;
+}
+.submenu {
+  list-style: none;
+  padding: 0;
 }
 .site-list__item a {
   text-decoration: none;
-  color: inherit;
-}
-.site-list__item a:hover {
-  color: gray;
-}
-.site-list__item a:focus {
-  color: gray;
-  outline: none;
-}
-.site-list__item a:active {
-  color: darkgray;
-}
-.site-list__item-submenu {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  list-style: none;
-  width: 200px;
-  padding: 0;
   text-align: center;
-  background-color: #f7f7f7;
-  border-radius: 5px;
-}
-.submenu__item {
-  width: 180px;
+  color: inherit;
   margin: auto;
-  padding-top: 6px;
-}
-.site-list__item:hover > .site-list__item-submenu {
-  visibility: visible;
-  opacity: 1;
   display: block;
-  position: absolute;
 }
 .main-nav__basket {
-  margin-top: 34px;
+  position: absolute;
+  top: 20px;
+  left: 57%;
+}
+@media (min-width: 768px) {
+  .main-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 748px;
+    margin: auto;
+  }
+  .main-nav__logo {
+    margin-top: 10px;
+  }
+  .site-list {
+    display: block;
+    display: flex;
+    font-size: 14px;
+  }
+  .site-list__item {
+    border: none;
+    width: 170px;
+    margin: auto;
+    text-align: center;
+  }
+  .site-list__item a:hover {
+    color: gray;
+  }
+  .site-list__item a:focus {
+    color: gray;
+    outline: none;
+  }
+  .site-list__item a:active {
+    color: darkgray;
+  }
+  .site-list__item-submenu {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    list-style: none;
+    width: 170px;
+    padding: 0;
+    text-align: center;
+    background-color: #f7f7f7;
+    border-radius: 5px;
+  }
+  .submenu__item {
+    width: 170px;
+    margin: auto;
+    padding-top: 6px;
+  }
+  .site-list__item:hover > .site-list__item-submenu {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+    position: absolute;
+  }
+  .main-nav__logo-button {
+    width: 130px;
+    margin: 0;
+  }
+  .main-nav__site-basket {
+    display: flex;
+    justify-content: space-between;
+    width: 580px;
+  }
+  .main-nav__open-close {
+    display: none;
+  }
+  .main-nav__basket {
+    position: relative;
+    width: 35px;
+    top: 30px;
+    left: 0;
+  }
+}
+@media (min-width: 1000px) {
+  .main-nav {
+    width: 960px;
+  }
+  .main-nav__logo {
+    margin-bottom: 14px;
+  }
+  .main-nav__site-basket {
+    display: flex;
+    width: 600px;
+    justify-content: space-between;
+  }
+  .site-list {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 15px;
+  }
+  .site-list__item {
+    width: 180px;
+  }
+  .main-nav__basket {
+    top: 37px;
+  }
+}
+@media (min-width: 1300px) {
+  .main-nav {
+    width: 1100px;
+  }
+  .site-list {
+    font-size: 16px;
+  }
+  .site-list__item {
+    width: 190px;
+  }
+  .site-list__item-submenu {
+    width: 190px;
+  }
+  .submenu__item {
+    width: 190px;
+  }
+  .main-nav__site-basket {
+    width: 660px;
+  }
 }
 .main-wrapper {
-  background-image: url('../img/background3.jpg');
-  background-position-y: -850px;
-  background-size: 100vw;
-  background-repeat: no-repeat;
+  background-color: #e8e8e8;
 }
 .welcome {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 330px;
+  margin-bottom: 90px;
+}
+.welcome__flower {
+  background-image: url('../img/flower21.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 70%;
+  height: 198px;
+  margin-top: 60px;
+  position: absolute;
 }
 .welcome__note {
   display: flex;
   flex-direction: column;
   margin: 0;
-  line-height: 0.7;
+  line-height: 0.8;
   text-align: right;
-  margin-right: 10%;
-  margin-top: 200px;
+  margin-right: 10px;
+  margin-top: 70px;
+  font-size: 36px;
+}
+.welcome__note-item {
+  width: 178px;
+  margin-left: 47%;
+}
+.welcome__note-item:nth-child(1) {
+  width: 220px;
+  margin-left: 26%;
+}
+.welcome__note-item:nth-child(2) {
+  margin-left: 40%;
 }
 .welcome__button {
-  width: 160px;
-  margin-left: 77%;
-  margin-top: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border: none;
-  font-family: inherit;
-  font-size: 14px;
-  background-color: white;
-  text-decoration: none;
-  text-align: center;
-  color: black;
+  display: none;
 }
 .welcome__button:hover {
   background-color: #f7f7f7;
@@ -107,12 +214,99 @@
   background-color: white;
   border: 2px solid black;
 }
+@media (min-width: 768px) {
+  .welcome__flower {
+    width: 80%;
+    height: 323px;
+  }
+  .welcome__note {
+    font-size: 40px;
+    line-height: 0.9;
+  }
+  .welcome__note-item {
+    width: 198px;
+    margin-left: 58%;
+  }
+  .welcome__note-item:nth-child(1) {
+    width: 260px;
+    margin-left: 30%;
+  }
+  .welcome__note-item:nth-child(2) {
+    margin-left: 44%;
+  }
+  .welcome__button {
+    position: relative;
+    width: 170px;
+    margin-left: 60%;
+    margin-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: npne;
+    border-radius: 4px;
+    font-family: inherit;
+    font-size: 14px;
+    background-color: white;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    z-index: 10;
+    display: block;
+  }
+}
+@media (min-width: 1000px) {
+  .welcome {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+  }
+  .welcome__flower {
+    width: 86%;
+    height: 343px;
+    margin-top: 140px;
+  }
+  .welcome__note-item {
+    margin-left: 62%;
+  }
+  .welcome__note-item:nth-child(1) {
+    margin-left: 36%;
+  }
+  .welcome__note-item:nth-child(2) {
+    margin-left: 50%;
+  }
+  .welcome__button {
+    width: 180px;
+    margin-left: 64%;
+    margin-top: 50px;
+  }
+}
+@media (min-width: 1300px) {
+  .welcome {
+    margin-bottom: 130px;
+  }
+  .welcome__note {
+    font-size: 42px;
+    margin-top: 100px;
+  }
+  .welcome__flower {
+    margin-top: 180px;
+    height: 391px;
+  }
+  .welcome__note-item {
+    width: 210px;
+  }
+  .welcome__button {
+    width: 190px;
+    font-size: 16px;
+    margin-top: 70px;
+  }
+}
 .new {
   background-color: white;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  padding-bottom: 60px;
 }
 .new__wrapper {
-  width: 90%;
+  width: 300px;
   margin: auto;
   display: flex;
 }
@@ -121,22 +315,21 @@
   text-align: center;
   font-family: "GothamBlack1";
   text-transform: uppercase;
-  font-size: 36px;
-  padding-top: 60px;
+  font-size: 32px;
+  padding-top: 50px;
 }
 .new__list {
   padding: 0;
   margin: auto;
-  margin-top: 80px;
-  margin-bottom: 100px;
+  margin-top: 50px;
   width: 1120px;
   list-style: none;
   display: flex;
   overflow: hidden;
 }
 .new__item {
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .new__item-title {
   margin: 20px 0;
@@ -160,7 +353,7 @@
 .new__item-buy {
   border: none;
   width: 94px;
-  margin-left: 7px;
+  margin-left: 7.4px;
   background-color: black;
   color: white;
   height: 30px;
@@ -183,19 +376,58 @@
   margin-top: 120px;
 }
 .button-left::after {
-  width: 45px;
+  width: 30px;
   height: 84px;
   position: absolute;
   content: '';
-  background-image: url('../img/arrow-left.png');
+  background-image: url('../img/arrow-left30.png');
 }
 .button-right::after {
-  width: 45px;
+  width: 30px;
   height: 84px;
-  margin-left: -45px;
+  margin-left: -30px;
   position: absolute;
   content: '';
-  background-image: url('../img/arrow-right.png');
+  background-image: url('../img/arrow-right30.png');
+}
+@media (min-width: 768px) {
+  .new__title {
+    padding-top: 60px;
+  }
+  .new__list {
+    margin-top: 60px;
+  }
+  .new__wrapper {
+    width: 668px;
+  }
+  .new__item {
+    margin-left: 68px;
+    margin-right: 68px;
+  }
+}
+@media (min-width: 1000px) {
+  .new__wrapper {
+    width: 960px;
+  }
+  .new__item {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+@media (min-width: 1300px) {
+  .new {
+    padding-bottom: 100px;
+  }
+  .new__title {
+    font-size: 36px;
+  }
+  .new__wrapper {
+    width: 1200px;
+  }
+  .new__item {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
 }
 .useful {
   background-color: #f7f7f7;
@@ -205,8 +437,8 @@
   text-align: center;
   font-family: "GothamBlack1";
   text-transform: uppercase;
-  font-size: 36px;
-  padding-top: 60px;
+  font-size: 32px;
+  padding-top: 50px;
 }
 .useful__list {
   padding-bottom: 100px;
@@ -216,6 +448,16 @@
 }
 .useful__item {
   font-size: 20px;
+}
+@media (min-width: 768px) {
+  .useful__title {
+    padding-top: 60px;
+  }
+}
+@media (min-width: 1300px) {
+  .useful__title {
+    font-size: 36px;
+  }
 }
 .catalog {
   background-color: white;
@@ -228,31 +470,32 @@
   text-align: center;
   font-family: "Gotham";
   text-transform: uppercase;
-  font-size: 32px;
-  padding-top: 60px;
+  font-size: 30px;
+  padding-top: 50px;
   font-weight: 900;
 }
 .catalog__list {
   list-style: none;
   padding: 0;
   margin: auto;
-  margin-top: 80px;
-  margin-bottom: 100px;
-  width: 1120px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 300px;
   display: flex;
   flex-wrap: wrap;
 }
 .catalog__item {
-  margin-bottom: 80px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-bottom: 60px;
+  margin-left: 52px;
+  margin-right: 52px;
 }
 .catalog__item-title {
   margin: 20px 0;
   font-size: 18px;
 }
-.catalog__item-number {
+.number {
   display: flex;
+  margin-bottom: 18px;
 }
 .number__form input {
   width: 20px;
@@ -271,7 +514,9 @@
 }
 .number__description {
   margin: 0;
-  font-size: 10px;
+  font-size: 11px;
+  margin-top: 2px;
+  margin-left: 12px;
   color: gray;
 }
 .catalog__item-more {
@@ -301,23 +546,61 @@
   color: black;
   border: 2px solid black;
 }
+@media (min-width: 768px) {
+  .catalog__title {
+    padding-top: 60px;
+  }
+  .catalog__list {
+    width: 668px;
+    margin-top: 60px;
+  }
+  .catalog__item {
+    margin-left: 67px;
+    margin-right: 67px;
+  }
+}
+@media (min-width: 1000px) {
+  .catalog__list {
+    width: 960px;
+  }
+  .catalog__item {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+@media (min-width: 1300px) {
+  .catalog__title {
+    font-size: 32px;
+  }
+  .catalog__list {
+    width: 1120px;
+  }
+  .catalog__item {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
 .circumstances__title {
   margin: 0;
   text-align: center;
   font-family: "GothamBlack1";
   text-transform: uppercase;
-  font-size: 36px;
-  padding-top: 60px;
+  font-size: 32px;
+  padding-top: 50px;
 }
 .circumstances__wrapper {
   display: flex;
-  width: 900px;
+  width: 300px;
   margin: auto;
+  margin-top: 50px;
   justify-content: space-between;
 }
+.circumstances__desription {
+  margin: 0;
+}
 .circumstances__img {
-  width: 250px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -326,6 +609,24 @@
 }
 .payment > .circumstances__img {
   background-image: url('../img/payment.png');
+}
+@media (min-width: 768px) {
+  .circumstances__title {
+    padding-top: 60px;
+  }
+  .circumstances__wrapper {
+    width: 668px;
+    margin-top: 60px;
+  }
+  .circumstances__img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (min-width: 1300px) {
+  .circumstances__title {
+    font-size: 36px;
+  }
 }
 @font-face {
   font-family: "Gotham";
@@ -391,6 +692,14 @@ a:focus {
   padding-left: 10px;
   overflow: hidden;
 }
+/*.go-up {
+  position: fixed;
+  background-color: gray;
+  width: 20px;
+  height: 20px;
+  top: 90%;
+  left: 90%;
+} */
 img:hover + .novelty {
   opacity: 1;
 }
