--- a/source/less/style.less
+++ b/source/less/style.less
@@ -75,6 +75,15 @@ a:focus {
   overflow: hidden;
 }
 
+/*.go-up {
+  position: fixed;
+  background-color: gray;
+  width: 20px;
+  height: 20px;
+  top: 90%;
+  left: 90%;
+} */
+
 img:hover+.novelty {
   opacity: 1;
 }
