--- a/source/less/important.less
+++ b/source/less/important.less
@@ -30,6 +30,7 @@
 }
 
 .new__item {
+    display: inline-block;
     margin-left: 50px;
     margin-right: 50px;
 }
@@ -139,7 +140,12 @@
     .new {
         padding-bottom: 100px;
     }
-    
+
+    .new__wrap {
+        width: 1100px;
+        overflow: hidden;
+    }
+
     .new__title {
         font-size: 36px;
     }
