--- a/source/less/welcome.less
+++ b/source/less/welcome.less
@@ -90,7 +90,7 @@
         margin-top: 30px;
         padding-top: 15px;
         padding-bottom: 15px;
-        border: npne;
+        border: none;
         border-radius: 4px;
         font-family: inherit;
         font-size: 14px;
